--- a/wiki/fr/TechDraw_ExtensionLockUnlockView.html
+++ b/wiki/fr/TechDraw_ExtensionLockUnlockView.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionLockUnlockView/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionLockUnlockView&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_ExtensionLockUnlockView.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Erg&auml;nzungAnsichtSperrenEntsperren (75% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_ExtensionLockUnlockView.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungAnsichtSperrenEntsperren (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionLockUnlockView.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionLockUnlockView (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionLockUnlockView.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Blocca/sblocca vista (75% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_ExtensionLockUnlockView.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Rozszerzenie Zablokuj / odblokuj widok (75% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../pl/TechDraw_ExtensionLockUnlockView.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Zablokuj / odblokuj widok (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionShortenLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">Raccourcir</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionPositionSectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionPositionSectionView.html" title="TechDraw ExtensionPositionSectionView/fr">Positionner une vue en coupe</a>
@@ -11,7 +11,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -22,7 +21,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; Verrouiller/d&eacute;verrouiller les vues
+<td class="ctEven">TechDraw &rarr; Attributs/modifications &rarr; Verrouiller/d&eacute;verrouiller les vues
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -51,7 +50,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Verrouiller/d&eacute;verrouiller</b> verrouille ou d&eacute;verrouille la position d'une vue en basculant sa propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Lock Position</b>. Une vue verrouill&eacute;e a une position fixe par rapport &agrave; la feuille ou au groupe auquel elle appartient.
 </p><p><span id="Usage"></span>
@@ -88,7 +86,7 @@
 <hr>
 <ul><li><b>Extensions&nbsp;:</b>
 <ul><li><b>Attributs et modifications&nbsp;:</b> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">Choix des attributs</a>, <a href="../fr/TechDraw_ExtensionChangeLineAttributes.html" title="TechDraw ExtensionChangeLineAttributes/fr">Modification des attributs</a>, <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">Prolonger</a>, <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">Raccourcir</a>, <a class="mw-selflink selflink">Verrouiller/d&eacute;verrouiller</a>, <a href="../fr/TechDraw_ExtensionPositionSectionView.html" title="TechDraw ExtensionPositionSectionView/fr">Positionner une vue en coupe</a>, Aligner (<a href="../fr/TechDraw_ExtensionPosHorizChainDimension.html" title="TechDraw ExtensionPosHorizChainDimension/fr">horizontalement</a> -  <a href="../fr/TechDraw_ExtensionPosVertChainDimension.html" title="TechDraw ExtensionPosVertChainDimension/fr">verticalement</a> - <a href="../fr/TechDraw_ExtensionPosObliqueChainDimension.html" title="TechDraw ExtensionPosObliqueChainDimension/fr">obliquemement</a>), Cascade (<a href="../fr/TechDraw_ExtensionCascadeHorizDimension.html" title="TechDraw ExtensionCascadeHorizDimension/fr">horizontale</a> - <a href="../fr/TechDraw_ExtensionCascadeVertDimension.html" title="TechDraw ExtensionCascadeVertDimension/fr">verticale</a> - <a href="../fr/TechDraw_ExtensionCascadeObliqueDimension.html" title="TechDraw ExtensionCascadeObliqueDimension/fr">inclin&eacute;e</a>), <a href="../fr/TechDraw_ExtensionAreaAnnotation.html" title="TechDraw ExtensionAreaAnnotation/fr">Calculer l'aire des faces s&eacute;lectionn&eacute;es</a>, <a href="../fr/TechDraw_ExtensionArcLengthAnnotation.html" title="TechDraw ExtensionArcLengthAnnotation/fr">Longueur d'arc d'ar&ecirc;tes s&eacute;lectionn&eacute;es</a>,  <a href="../fr/TechDraw_ExtensionCustomizeFormat.html" title="TechDraw ExtensionCustomizeFormat/fr">Personnaliser le format d'infobulle</a></li>
-<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersection de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
+<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersections cosm&eacute;tiques de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
 <li><b>Cotes&nbsp;:</b> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Diam&egrave;tre '&#8960;'</a>, <a href="../fr/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/fr">Section tube '&#12348;'</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">Ins&eacute;rer le pr&eacute;fixe "n&times;"</a>,  <a href="../fr/TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar/fr">Supprimer les symboles</a>, D&eacute;cimales (<a href="../fr/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/fr">en plus</a> - <a href="../fr/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/fr">en moins</a>)</li></ul></li></ul>
 <hr>
 <ul><li><b>Divers&nbsp;:</b> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Supprimer l'objet cosm&eacute;tique</a></li></ul>
@@ -111,35 +109,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111105003
+Cached time: 20260125094624
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.223 seconds
-Preprocessor visited node count: 404/1000000
-Post&#8208;expand include size: 25478/2097152 bytes
-Template argument size: 10128/2097152 bytes
+CPU time usage: 0.074 seconds
+Real time usage: 0.110 seconds
+Preprocessor visited node count: 403/1000000
+Post&#8208;expand include size: 25480/2097152 bytes
+Template argument size: 10116/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1330/5000000 bytes
+Unstrip post&#8208;expand size: 1340/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.739      1 -total
- 31.39%   14.045      1 Template:TechDraw_Tools_navi/fr
- 13.74%    6.147      1 Template:GuiCommand/fr
- 13.68%    6.121      2 Template:Docnav/fr
- 13.22%    5.916      2 Template:PropertyData
- 12.86%    5.755      2 Template:Navigation_menu_2
- 11.79%    5.274      1 Template:Userdocnavi/fr
-  8.82%    3.947      1 Template:Button
-  8.61%    3.851      2 Template:Variable
-  5.41%    2.419      1 Template:MenuCommand
+100.00%   26.213      1 -total
+ 23.56%    6.176      1 Template:TechDraw_Tools_navi/fr
+ 23.54%    6.171      2 Template:PropertyData
+ 17.71%    4.642      2 Template:Navigation_menu_2
+ 14.39%    3.771      1 Template:Userdocnavi/fr
+ 12.35%    3.237      2 Template:Variable
+ 12.28%    3.219      2 Template:Docnav/fr
+ 10.67%    2.796      1 Template:GuiCommand/fr
+  7.19%    1.884      1 Template:MenuCommand
+  6.04%    1.583      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277564-0!canonical and timestamp 20260111105003 and revision id 1732987. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277564-0!canonical and timestamp 20260125094624 and revision id 1743510. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
