--- a/wiki/fr/TechDraw_ExtensionPosVertChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionPosVertChainDimension.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionPosVertChainDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionPosVertChainDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionPosVertChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungVertikaleKettenma&szlig;eAnordnen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionPosVertChainDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionPosVertChainDimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionPosVertChainDimension.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Allinea in Serie Quote Verticali (82% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionPosVertChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie U&#322;&oacute;&#380; pionow&#261; seri&#281; wymiar&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -58,14 +58,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez deux cotes verticales ou plus.</li>
 <li>La premi&egrave;re cote d&eacute;finit la position. Cette cote ne sera pas d&eacute;plac&eacute;e.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosVertChainDimension.svg&amp;filetimestamp=20240707203333&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosVertChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Aligner verticalement les cotes</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosVertChainDimension.svg&amp;filetimestamp=20240707203333&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosVertChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Aligner verticalement les cotes</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionPosVertChainDimension.svg&amp;filetimestamp=20240707203333&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionPosVertChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Aligner verticalement les cotes</b> du menu.</li></ul></li>
 <li>Les cotes sont align&eacute;es et leurs textes sont centr&eacute;s.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -117,34 +115,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125095404
+Cached time: 20260125095427
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.113 seconds
-Preprocessor visited node count: 355/1000000
-Post&#8208;expand include size: 26211/2097152 bytes
-Template argument size: 10537/2097152 bytes
+CPU time usage: 0.078 seconds
+Real time usage: 0.117 seconds
+Preprocessor visited node count: 354/1000000
+Post&#8208;expand include size: 26198/2097152 bytes
+Template argument size: 10524/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1406/5000000 bytes
+Unstrip post&#8208;expand size: 1410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.308      1 -total
- 30.46%    7.405      1 Template:TechDraw_Tools_navi/fr
- 19.28%    4.687      2 Template:Navigation_menu_2
- 16.34%    3.971      2 Template:Docnav/fr
- 16.08%    3.908      1 Template:Userdocnavi/fr
- 12.06%    2.932      1 Template:GuiCommand/fr
-  9.45%    2.296      1 Template:Caption
-  7.31%    1.778      1 Template:Button
-  6.05%    1.470      1 Template:MenuCommand
+100.00%   28.626      1 -total
+ 28.70%    8.215      1 Template:TechDraw_Tools_navi/fr
+ 19.60%    5.612      2 Template:Navigation_menu_2
+ 17.11%    4.899      1 Template:GuiCommand/fr
+ 16.20%    4.637      1 Template:Userdocnavi/fr
+ 10.99%    3.145      1 Template:Caption
+ 10.77%    3.083      2 Template:Docnav/fr
+  8.10%    2.318      1 Template:Button
+  5.27%    1.508      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277601-0!canonical and timestamp 20260125095404 and revision id 1743528. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277601-0!canonical and timestamp 20260125095426 and revision id 1743530. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
